user register swagger + user validator
